--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,15 @@ sudo: false # Use container based builds. They are faster and we do not need sud
 dist: trusty
 jdk:
   - openjdk8
+  - openjdk11
   - oraclejdk8
-#fails on because because java 9.0.1 is not compatible with gradle 4.0 currently used by travis
-# https://github.com/travis-ci/travis-ci/issues/8975
-# therefore disabled until travis fixes it.
-# - oraclejdk9
+  - oraclejdk11
 
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
-script: 
+script:
   - gradle -PTestLoggingFull=true check_translation check
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
